example/k8s/server.b.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-b-deployment
  labels:
    app: server-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-b
  template:
    metadata:
      labels:
        app: server-b
    spec:
      containers:
        - name: server-b
          env:
            - name: SERVER_PORT
              value: "8080"
            - name: RANDOM_NUM_LENGTH
              value: "2"
          image: xds.example/server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: grpc-port
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: server-b
  name: server-b
spec:
  ports:
    - name: grpc-port
      port: 8080
      protocol: TCP
      targetPort: grpc-port
  selector:
    app: server-b
  clusterIP: None
