example/k8s/xds-controller.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xds-controller-deployment
  labels:
    app: xds-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xds-controller
  template:
    metadata:
      labels:
        app: xds-controller
    spec:
      serviceAccountName: xds-controller-sa
      containers:
        - name: xds-controller
          env:
            # - name: "GRPC_XDS_EXPERIMENTAL_ENABLE_RETRY"
            #   value: "false"
            - name: "GRPC_GO_LOG_SEVERITY_LEVEL"
              value: info
            - name: "GRPC_GO_LOG_VERBOSITY_LEVEL"
              value: "99"
          image: xds.example/xds-controller:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: grpc-port
              protocol: TCP
            - containerPort: 8082
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: controller-config
              mountPath: /config
      volumes:
        - name: controller-config
          configMap:
            name: xds-controller-config-map-ceww4rfgfy
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: xds-controller
  name: xds-controller
spec:
  ports:
    - name: grpc-port
      port: 8080
      protocol: TCP
      targetPort: grpc-port
  selector:
    app: xds-controller
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: xds-controller-prom
  name: xds-controller-prom
spec:
  ports:
    - name: prom
      port: 8082
      targetPort: 8082
  selector:
    app: xds-controller
---
apiVersion: v1
kind: ConfigMap
metadata:
  annotations:
    note: xds-controller-config-map
  name: xds-controller-config-map-ceww4rfgfy
data:
  GRPC_XDS_EXPERIMENTAL_V3_SUPPORT: "true"
  config.yaml: |
    node_id: THIS_IS_THE_SNAPSHOT_ID_THAT_MATCHES_TO_XDS_CONTROLLER
    log_debug: true
    listener_port: 8080
    prometheus_port: 8082
    max_concurrent_streams: 1000
    refresh_interval_in_sec: 5
    clusters:
      - name: grpc-server-cdsf
        resolver_type: k8
        address: server
        name_space: xds-test
        port: 8080
        lb_policy: ROUND_ROBIN
        max_requests: 1024
        retry:
          enabled: true
          retry_on: "unavailable,resource-exhausted,internal,deadline-exceeded,cancelled"
          num_retries: 5
          backoff_interval_in_sec: 1
          backoff_max_interval_in_sec: 5
      - name: grpc-server-b-cdsf
        resolver_type: k8
        address: server-b
        name_space: xds-test
        port: 8080
        lb_policy: ROUND_ROBIN
        max_requests: 1024
        retry:
          enabled: true
          retry_on: "unavailable,resource-exhausted,internal,deadline-exceeded,cancelled"
          num_retries: 5
          backoff_interval_in_sec: 1
          backoff_max_interval_in_sec: 5
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: xds-controller-sa
  namespace: xds-test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: xds-controller-role
  namespace: xds-test
rules:
  - apiGroups:
      - ""
    resources:
      - endpoints
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - namespaces
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - apps
    resources:
      - deployments
      - replicasets
      - statefulsets
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - policy
    resources:
      - poddisruptionbudgets
    verbs:
      - get
      - list
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: xds-controller-role
  namespace: xds-test
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: xds-controller-role
subjects:
  - kind: ServiceAccount
    name: xds-controller-sa
    namespace: xds-test
